--- a/HorizontalListView/HorizontalListView/HorizontalListView.Sample/Views/HorizontalMonkeysView.xaml
+++ b/HorizontalListView/HorizontalListView/HorizontalListView.Sample/Views/HorizontalMonkeysView.xaml
@@ -14,6 +14,7 @@
         <controls:HorizontalListView
             Grid.Row="0"
             ItemsSource="{Binding Monkeys}"
+            SelectedItem="{Binding SelectedMonkey, Mode=TwoWay}"
             HeightRequest="200">
             <controls:HorizontalListView.ItemTemplate>
                 <DataTemplate>
@@ -21,5 +22,10 @@
                 </DataTemplate>
             </controls:HorizontalListView.ItemTemplate>
         </controls:HorizontalListView>
+        <Label 
+            Grid.Row="1"
+            Text="{Binding SelectedMonkey.Name}"
+            TextColor="Black"
+            FontSize="Medium"/>
     </Grid>
 </ContentPage>
